Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.09.2022 08:04:51</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 29.09.2022 09:10:19</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,57 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 29.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, švestkami a drobenkou</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem, jablky a skořicovou drobenkou </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Čokoládový muffin</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s uzeným masem v menu <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s uzeným masem samostatně <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Pečené krůtí prso, omáčka z bílého vína, bulgur, kořenová zelenina, pažitka <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Řecký biftek, šťouchané brambory, pórek, tzatziki <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Květákové žluté kari, cizrna, jasmínová rýže, koriandr, smažená cibulka <em title="Hořčice">10</em></div>
+<div class="cena">159 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -95,7 +145,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Grilovane biftecky z rybich filetu { hejk, makrela, uzeny losos} s petrzelkou a paprikou, salsa z cerstvych rajcat a cervene cibule, pecene brambory, salatek 155</li><li>Peceny filet z cerstveho morskeho vlka se salsou z cerstvych rajcat a cervene cibule, pecene brambory, salatek 185</li><li>Kruti medailonky v citronove omacce po jihoindicku s kokosovym mlekem a zazvorem, jasminova ryze, salatek 155</li><li>Grilovane jemne korenene jehneci kofta, zeleninove birjany z basmati ryze, jogurtovy bylinkovy dip, salatek 175</li><li>Italske dynove rizoto s cerstvou brokolici a zralou goudou, salatek 155</li></ol>
+<ol><li>Peceny filet z atlanticke maktely se sladkokyselou paprikovou omackou, kari ze zeleneho hrachu s pecenou dyni a zeleninou, salatek 155</li><li>Smazena pakora z cerstve marinovane tresky v korenenem cizrnovem testicku, sladkokysela paprikova omacka, kari ze zeleneho hrachu s pecenou dyni a zeleninou, salatek 179</li><li>Thajske pikantni hovezi nudlicky s brokolici, pak coj a cerstvym chilli, jasminova ryze, salatek 155</li><li>Jehneci plec a hrudi {s kosti}, pecene na cesneku a rozmarynu, rizoto s listovym spenatem, pecena podzimni zelenina 175</li><li>Burrito s pikantnim fazolovym chilli s pecenymi palivymi paprikami chipotle, jogurtovy dip, gratinovane brambory, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
