Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.09.2022 08:06:57</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 30.09.2022 09:12:49</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -59,7 +59,27 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 30.9.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bylinkovým pestem v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Tomatová polévka s bylinkovým pestem samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Kuřecí gyros, čerstvá zelenina, bulgur, pita chléb, česnekový dip <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
+<div class="cena">169 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Italské rizoto s červenou řepou, rukola, restovaná semínka, nakládaný fenykl <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -95,7 +115,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke maktely se sladkokyselou paprikovou omackou, kari ze zeleneho hrachu s pecenou dyni a zeleninou, salatek 155</li><li>Smazena pakora z cerstve marinovane tresky v korenenem cizrnovem testicku, sladkokysela paprikova omacka, kari ze zeleneho hrachu s pecenou dyni a zeleninou, salatek 179</li><li>Thajske pikantni hovezi nudlicky s brokolici, pak coj a cerstvym chilli, jasminova ryze, salatek 155</li><li>Jehneci plec a hrudi {s kosti}, pecene na cesneku a rozmarynu, rizoto s listovym spenatem, pecena podzimni zelenina 175</li><li>Burrito s pikantnim fazolovym chilli s pecenymi palivymi paprikami chipotle, jogurtovy dip, gratinovane brambory, salatek {L} 155</li></ol>
+<ol><li>Peceny jihocesky pstruh s jogurtovou krenovou omackou, korenena ryze s pecenou zeleninou, salatek 155</li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou krenovou omackou, korenena ryze s pecenou zeleninou, salatek z cervene repy 185</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem a zelenou cibulkou, jasminova ryze, salatek 155</li><li>Spagety s nudlickami srnci kyty, pecenymi cervenymi paprikami, rimskym salatem, petrzelkovym pestem a zralou goudou {L} 179</li><li>Kapustove placicky se spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
 </td>
 </tr>
 </table>
