--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 02.10.2022 15:10:54</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 07:38:05</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 02. 10. 2022</h5>
+<h5>Pondělí, 03. 10. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>V období 28.-30.9. bude jídelna ZAVŘENA</strong>
@@ -57,9 +57,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 2.10.2022</div>
+<div class="nadpis">Pondělí 3.10.2022</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -70,16 +70,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s klobásou</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se sýrem a krutóny</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninová s tortilovým chipsem a strouhaným sýrem</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Steak z kuřecích prsou gratinovaný mazzarelou, tomaty a bazalkovým pestem, mačkané brambory s pórkem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Svíčková na smetaně s hovězím masem, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská omáčka s paprikovým luskem, dušená jasmínová rýže </td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Maďarský hovězí guláš s cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové výpečky, bramborové knedlíky se šunkou a cibulí, špenát</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Steak z vepřové pečeně s anglickou slaninou a fazolovými lusky, volské oko, zakysaná smetana</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampiony, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Qusadilla plněná majonézovým dresinkem, sýrem, kukuřicí, červenou cibulí a kuřecím masem, hranolky, česnekový dip</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, hermelín v těstíčku, brusinkové žerve</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a šlehačkou</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Steak z kuřecích prsou se šunkou, fazolovými lusky, gratinovaný sýrem, mačkané brambory s máslem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Svíčková na smetaně s hovězím masem, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Rajská hovězí pečeně, těstoviny kolínky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g  Kuřecí játra na roštu, celerové a karotkové hranolky, česnekový dip</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí kung pao se zeleninou a arašídy, hranolky</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Kuřecí prsa na grilu máslová kukuřice s karotkou, mačkané brambory se strouhaným parmazánem</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny, promíchaný ceasar dresinkem, filírovaná kuřecí prsa, opečený toust</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Čokoládový nepečený řez s piškoty a šlehačkou</td><td class="menuPrice">55,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -87,15 +84,16 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
