Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 08:26:23</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 09:03:56</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -127,13 +127,7 @@
 <div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></div></div>
 </td>
 </tr>
 </table>
@@ -141,7 +135,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s jogurtovou krenovou omackou, korenena ryze s pecenou zeleninou, salatek 155</li><li>Peceny filet z cerstveho norskeho lososa s jogurtovou krenovou omackou, korenena ryze s pecenou zeleninou, salatek z cervene repy 185</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade s badyanem a zelenou cibulkou, jasminova ryze, salatek 155</li><li>Spagety s nudlickami srnci kyty, pecenymi cervenymi paprikami, rimskym salatem, petrzelkovym pestem a zralou goudou {L} 179</li><li>Kapustove placicky se spetkou muskatu, stouchane brambory s porkem, tatarska omacka {L} 155</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, stitinik, makrela}, kokosovym mlekem, arasidy, zeleninou a bramborami, jasminova ryze, salatek 155</li><li>Peceny filet z cerstveho morskeho dasa se susenymi rajcaty a olivami v oivovem oleji, korenena ryze s beluga cockou, salatek 185</li><li>Grilovany veprovy tanduri kebab v jogurtove marinade se zazvorem, korenena ryze s beluga cockou, jogurtovy dip s citronem a bylinkami, salatek 155</li><li>Grilovane medailonky ze srnci kyty a jehnecich jater s dzemem z  cervene cibule, gratinovane brambory, salatek 185</li><li>Maghrebska cizrnova tazina s pecenou dyni, rajcaty a korenim Ras el hanout, sazene vejce, kuskus, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
