Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 09:03:56</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 09:48:11</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Pondělí, 03. 10. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>V období 28.-30.9. bude jídelna ZAVŘENA</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Houbová</strong>
+<strong>Papriková s klobásou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí na paprice s rýží NEBO těstovinou</strong>
+<strong>Vepřový perkelt s rýží / těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							147,-
 						</span>
 </p>
 <p>
-<strong>Vepřové srbské rizoto se sýrem a okurkou NEBO řepou</strong>
+<strong>Penne s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>TEPLÝ BUFET: Tilapie s bazalkovým pestem, Vepřový plátek s omáčkou ze sušených rajcat, baby mrkev, rýže, kuskus, pečený brambor</strong>
+<strong>TB: hovězí na slanině, pečený brambor, ryze, zelenina, tilapie s dýní</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>SALÁTY: Míchaný, kuskus se zeleninou a limetkovým dipem</strong>
+<strong>Chilli kuskus s okurkou a pestem, ledový salát s červenou řepou a balsamikem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -72,6 +65,16 @@
 <li class="poznamka">
 <div class="polozka">Ořechová bábovka</div>
 <div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bulgurový salát s krůtím masem</div>
+<div class="cena">119 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Variace bavorských baget </div>
+<div class="cena">69 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
