--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 10:18:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 03.10.2022 10:54:52</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -138,7 +138,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, stitinik, makrela}, kokosovym mlekem, arasidy, zeleninou a bramborami, jasminova ryze, salatek 155</li><li>Peceny filet z cerstveho morskeho dasa se susenymi rajcaty a olivami v oivovem oleji, korenena ryze s beluga cockou, salatek 185</li><li>Grilovany veprovy tanduri kebab v jogurtove marinade se zazvorem, korenena ryze s beluga cockou, jogurtovy dip s citronem a bylinkami, salatek 155</li><li>Grilovane medailonky ze srnci kyty a jehnecich jater s dzemem z  cervene cibule, gratinovane brambory, salatek 185</li><li>Maghrebska cizrnova tazina s pecenou dyni, rajcaty a korenim Ras el hanout, sazene vejce, kuskus, salatek {L} 155</li></ol>
+<ol><li>Thajske cervene kari s kousky rybich filetu {hejk, stitnik, makrela}, kokosovym mlekem, arasidy, zeleninou a bramborami, jasminova ryze, salatek 155</li><li>Peceny filet z cerstveho morskeho dasa se susenymi rajcaty a olivami v oivovem oleji, korenena ryze s beluga cockou, salatek 185</li><li>Grilovany veprovy tanduri kebab v jogurtove marinade se zazvorem, korenena ryze s beluga cockou, jogurtovy dip s citronem a bylinkami, salatek 155</li><li>Grilovane medailonky ze srnci kyty a jehnecich jater s dzemem z  cervene cibule, gratinovane brambory, salatek 185</li><li>Maghrebska cizrnova tazina s pecenou dyni, rajcaty a korenim Ras el hanout, sazene vejce, kuskus, salatek {L} 155</li></ol>
 </td>
 </tr>
 </table>
