Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.10.2022 09:01:55</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 04.10.2022 09:50:00</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Úterý, 04. 10. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Papriková s klobásou</strong>
+<strong>Žampionová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Vepřový perkelt s rýží / těstovinou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							147,-
-						</span>
-</p>
-<p>
-<strong>Penne s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Domácí sekaná s pečeným bramborem a hořčicí</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							145,-
 						</span>
 </p>
 <p>
-<strong>TB: hovězí na slanině, pečený brambor, ryze, zelenina, tilapie s dýní</strong>
+<strong>Filatko Tilapie s kari cizrnou a zeleninou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							147,-
+						</span>
+</p>
+<p>
+<strong>TB: zelenina, rýže, Vepřová Čína, pečený brambor, Tilapie s bylinkovým olejem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							44,-
 						</span>
 </p>
 <p>
-<strong>Chilli kuskus s okurkou a pestem, ledový salát s červenou řepou a balsamikem</strong>
+<strong>Salaty: Míchaný s cesnekovym dipem,chilli kuskus s okurkami a cedarem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							40,-
@@ -83,7 +83,7 @@
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>250g Pečené kuřecí stehno na paprice, tarhoňa, polníček, ředkvička <em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>250g Pečené kuřecí stehno na paprice, tarhoňa, polníček, ředkvička <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">169 Kč</div>
 <div class="clear"></div>
 </li>
